Disable BrowserWindowPropertyManagerTest.HostedApp

No-Try: true
Tbr: bsep@chromium.org, pkasting@chromium.org, sky@chromium.org
Bug: 919760
Change-Id: Iaabcf49be8c247153a87bb63930ca9ba55bd57b7
Reviewed-on: https://chromium-review.googlesource.com/c/1403966
Reviewed-by: Adithya Srinivasan <adithyas@chromium.org>
Commit-Queue: Adithya Srinivasan <adithyas@chromium.org>
Cr-Commit-Position: refs/heads/master@{#621603}
Former-commit-id: b70226b3e1acdb6401496286fe15c0fa935c9c76